--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@ systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.login=cb45beadaf360cba8f0a0097fd2698a60665eee3
 systemProp.sonar.projectKey=tomek199_RankMe
 systemProp.sonar.organization=tomek199
+systemProp.sonar.java.coveragePlugin=jacoco
 
 #systemProp.sonar.sources=domain/src
 #systemProp.sonar.tests=domain/src/test/kotlin
 #systemProp.sonar.binaries=*/build/classes
 #systemProp.sonar.tests=junit
 #systemProp.sonar.junit.reportsPath=*/build/test-results
-systemProp.sonar.java.coveragePlugin=jacoco
-systemProp.sonar.jacoco.reportPath=domain/build/test-results/test.exec
+#systemProp.sonar.jacoco.reportPath=domain/build/test-results/test.exec
 
-#systemProp.sonar.branch.target=develop
+systemProp.sonar.branch.target=develop
