#91 Play game command (#94)
* #91 Bump up version
* #91 Remove redundant @Autowired annotation
* #91 Update EventStore dependency
* #91 Add Game domain
* #91 Add Glicko service to Player domain
* #91 Update player storage by new event
* #91 Implement player adapter
* #91 Add game event storage
* #91 Update game domain
* #91 Implement game repository
* #91 Update EventStorage driver version
* #91 Add play-game command handler
* #91 Clear whitespaces
* #91 PlayGame mutation

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -12,8 +12,7 @@ graphiql:
     version: 0.13.0
 
 eventstore:
-  host: localhost
-  port: 2113
+  endpoint: esdb://localhost:2113?tls=false
 
 spring:
   rabbitmq:
