--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,13 @@ services:
       - 1113:1113
       - 2113:2113
 
+  postgres:
+    image: library/postgres:13.1-alpine
+    environment:
+      - POSTGRES_PASSWORD=devpass
+    ports:
+      - 5432:5432
+
   rabbitmq:
     image: library/rabbitmq:3.8.9-management
     ports:
