#102 Add profiles to switch events database

--- a/command-service/src/main/resources/application.yml
+++ b/command-service/src/main/resources/application.yml
@@ -5,6 +5,8 @@ eventstore:
   endpoint: esdb://localhost:2113?tls=false
 
 spring:
+  profiles:
+    active: eventstore
   datasource:
     url: jdbc:postgresql://localhost:5432/rankme
     username: postgres
