#102 Add 'postgresql' profile for command repositories

--- a/command-service/src/main/resources/application.yml
+++ b/command-service/src/main/resources/application.yml
@@ -1,12 +1,9 @@
 server:
   port: 9100
 
-eventstore:
-  endpoint: esdb://localhost:2113?tls=false
-
 spring:
   profiles:
-    active: eventstore
+    active: postgresql
   datasource:
     url: jdbc:postgresql://localhost:5432/rankme
     username: postgres
