#102 Add PostgreSQL repositories for command-service (#107)
* #102 Add configuration for PostgreSQL
* #102 Bump up version
* #102 Add profiles to switch events database
* #102 Provide mapper to serialize/deserialize events
* #102 Add PostgreSQL league repository
* #102 Increate test coverage
* #102 Add unit tests
* #102 Add PostgreSQL player repository
* #102 Add PostgreSQL game repository
* #102 Add 'postgresql' profile for command repositories

--- a/command-service/src/main/resources/application.yml
+++ b/command-service/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 server:
   port: 9100
 
-eventstore:
-  endpoint: esdb://localhost:2113?tls=false
-
 spring:
+  profiles:
+    active: postgresql
+  datasource:
+    url: jdbc:postgresql://localhost:5432/rankme
+    username: postgres
+    password: devpass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   rabbitmq:
     host: localhost
     port: 5672
