--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,13 @@
 version: '3.4'
 
 services:
-  eventstore:
-    image: eventstore/eventstore:20.6.1-buster-slim
+  postgres:
+    image: library/postgres:13.1-alpine
     environment:
-      - EVENTSTORE_CLUSTER_SIZE=1
-      - EVENTSTORE_RUN_PROJECTIONS=All
-      - EVENTSTORE_START_STANDARD_PROJECTIONS=true
-      - EVENTSTORE_EXT_TCP_PORT=1113
-      - EVENTSTORE_EXT_HTTP_PORT=2113
-      - EVENTSTORE_INSECURE=true
-      - EVENTSTORE_ENABLE_EXTERNAL_TCP=true
-      - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
+      - POSTGRES_PASSWORD=devpass
+      - POSTGRES_DB=rankme
     ports:
-      - 1113:1113
-      - 2113:2113
+      - 5432:5432
 
   rabbitmq:
     image: library/rabbitmq:3.8.9-management
