--- a/query-service/src/main/resources/application.yml
+++ b/query-service/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 9200
 
 spring:
+  application:
+    name: query-service
+  config:
+    import: optional:configserver:http://dev:9900/
   rabbitmq:
     host: localhost
     port: 5672
