--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 9000
-
 spring:
   application:
     name: api
@@ -11,19 +10,19 @@ spring:
     port: 5672
     username: guest
     password: guest
-
 graphql:
   servlet:
     mapping: /graphql
     enabled: true
     corsEnabled: true
-
 graphiql:
   mapping: /graphiql
   enabled: true
   cdn:
     enabled: false
     version: 0.13.0
-
-query-service:
-  url: http://localhost:9200
+gateway:
+  url: http://localhost:9700
+eureka:
+  client:
+    register-with-eureka: false
