#115 Change query communication to REST (#116)
* #115 Bump up version
* #115 Rename packages
* #115 Add rest endpoints in query-service
* #115 Add logger for controllers
* #115 Add rest client to call query-service
* #115 Add discovery-service
* #115 Add gateway-service
* #115 Register query-service in discovery-service
* #115 Setup api service to user gateway
* #115 Remove unused property

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 9000
-
 spring:
   application:
     name: api
@@ -11,16 +10,16 @@ spring:
     port: 5672
     username: guest
     password: guest
-
 graphql:
   servlet:
     mapping: /graphql
     enabled: true
     corsEnabled: true
-
 graphiql:
   mapping: /graphiql
   enabled: true
   cdn:
     enabled: false
     version: 0.13.0
+gateway:
+  url: http://localhost:9700
