--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,6 +10,16 @@ spring:
     port: 5672
     username: guest
     password: guest
+  cloud:
+    stream:
+      bindings:
+        apiCommand-out-0:
+          destination: api-command
+      rabbit:
+        bindings:
+          apiCommand-out-0:
+            producer:
+              routingKeyExpression: headers['type']
 graphql:
   servlet:
     mapping: /graphql
