--- a/command-service/src/main/resources/application.yml
+++ b/command-service/src/main/resources/application.yml
@@ -28,28 +28,28 @@ spring:
         createPlayerCommandHandler;playGameCommandHandler;scheduleGameCommandHandler;completeGameCommandHandler"
       bindings:
         createLeagueCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: create-league-command-group
         renameLeagueCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: rename-league-command-group
         changeLeagueSettingsCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: change-league-settings-command-group
         createPlayerCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: create-player-command-group
         playGameCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: play-game-command-group
         scheduleGameCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: schedule-game-command-group
         completeGameCommandHandler-in-0:
-          destination: api-command
+          destination: api.command
           group: complete-game-command-group
         commandQuery-out-0:
-          destination: command-query
+          destination: command.query
       rabbit:
         bindings:
           createLeagueCommandHandler-in-0.consumer.bindingRoutingKey: CreateLeagueCommand
