--- a/query-service/src/main/resources/application.yml
+++ b/query-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: query-service
   config:
-    import: optional:configserver:http://dev:9900/
+    import: optional:configserver:http://localhost:9900/
   rabbitmq:
     host: localhost
     port: 5672
