--- a/query-service/src/main/resources/application.yml
+++ b/query-service/src/main/resources/application.yml
@@ -37,3 +37,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/rankme
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9800/eureka
