--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: discovery-service
   config:
-    import: optional:configserver:http://localhost:9900/
+    import: ${CONFIG_SERVICE_URI:optional:configserver:http://localhost:9900}
 eureka:
   server:
     maxThreadsForPeerReplication: 0
