#103 Add full docker configuration

--- a/command-service/Dockerfile
+++ b/command-service/Dockerfile
@@ -1,3 +1,6 @@
 FROM openjdk:11-jdk
 ADD build/libs/command-service*.jar command-service.jar
-ENTRYPOINT ["java", "-Djav1a.security.egd=file:/dev/./urandom", "-jar", "/command-service.jar"]
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.8.0/wait /wait
+RUN printf "#!/bin/bash\n/wait && java -jar /command-service.jar" > /entrypoint.sh
+RUN chmod +x /wait /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
