--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,6 +1,3 @@
 FROM openjdk:11-jdk
 ADD build/libs/config-service*.jar config-service.jar
-ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.8.0/wait /wait
-RUN printf "#!/bin/bash\n/wait && java -jar /config-service.jar" > /entrypoint.sh
-RUN chmod +x /wait /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["java", "-jar", "/config-service.jar"]
