#103 Add league scenarios

--- a/api-e2e/src/test/resources/cucumber.properties
+++ b/api-e2e/src/test/resources/cucumber.properties
@@ -1,1 +1,3 @@
 cucumber.publish.quiet=true
+api-service.url=http://localhost:9000/graphql
+spring.data.mongodb.uri=mongodb://localhost:27017/rankme
