Add consumer for 'player-played-game'

--- a/query-service/src/main/resources/application.yml
+++ b/query-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     stream:
       function:
         definition: "leagueCreatedMessageConsumer;leagueRenamedMessageConsumer;leagueSettingsChangedMessageConsumer;\
-        playerCreatedMessageConsumer"
+        playerCreatedMessageConsumer;playerPlayedGameMessageConsumer"
       bindings:
         leagueCreatedMessageConsumer-in-0:
           destination: command.query
@@ -28,12 +28,16 @@ spring:
         playerCreatedMessageConsumer-in-0:
           destination: command.query
           group: player-created-consumer-group
+        playerPlayedGameMessageConsumer-in-0:
+          destination: command.query
+          group: player-played-game-consumer-group
       rabbit:
         bindings:
           leagueCreatedMessageConsumer-in-0.consumer.bindingRoutingKey: league-created
           leagueRenamedMessageConsumer-in-0.consumer.bindingRoutingKey: league-renamed
           leagueSettingsChangedMessageConsumer-in-0.consumer.bindingRoutingKey: league-settings-changed
           playerCreatedMessageConsumer-in-0.consumer.bindingRoutingKey: player-created
+          playerPlayedGameMessageConsumer-in-0.consumer.bindingRoutingKey: player-played-game
   data:
     mongodb:
       uri: mongodb://localhost:27017/rankme
