#121 Game event handlers (#123)
* #121 Bump up version
* #121 Add consumer for 'player-played-game'
* #121 Add game repository
* #121 Add player port and adapter
* #121 Add game-played consumer
* #121 Add game-scheduled consumer

--- a/query-service/src/main/resources/application.yml
+++ b/query-service/src/main/resources/application.yml
@@ -14,7 +14,8 @@ spring:
     stream:
       function:
         definition: "leagueCreatedMessageConsumer;leagueRenamedMessageConsumer;leagueSettingsChangedMessageConsumer;\
-        playerCreatedMessageConsumer"
+        playerCreatedMessageConsumer;playerPlayedGameMessageConsumer;\
+        gameScheduledMessageConsumer;gamePlayedMessageConsumer"
       bindings:
         leagueCreatedMessageConsumer-in-0:
           destination: command.query
@@ -28,12 +29,24 @@ spring:
         playerCreatedMessageConsumer-in-0:
           destination: command.query
           group: player-created-consumer-group
+        playerPlayedGameMessageConsumer-in-0:
+          destination: command.query
+          group: player-played-game-consumer-group
+        gameScheduledMessageConsumer-in-0:
+          destination: coommand.query
+          group: game-scheduled-consumer-group
+        gamePlayedMessageConsumer-in-0:
+          destination: command.query
+          group: game-played-consumer-group
       rabbit:
         bindings:
           leagueCreatedMessageConsumer-in-0.consumer.bindingRoutingKey: league-created
           leagueRenamedMessageConsumer-in-0.consumer.bindingRoutingKey: league-renamed
           leagueSettingsChangedMessageConsumer-in-0.consumer.bindingRoutingKey: league-settings-changed
           playerCreatedMessageConsumer-in-0.consumer.bindingRoutingKey: player-created
+          playerPlayedGameMessageConsumer-in-0.consumer.bindingRoutingKey: player-played-game
+          gameScheduledMessageConsumer-in-0.consumer.bindingRoutingKey: game-scheduled
+          gamePlayedMessageConsumer-in-0.consumer.bindingRoutingKey: game-played
   data:
     mongodb:
       uri: mongodb://localhost:27017/rankme
