--- a/command-service/src/main/resources/application.yml
+++ b/command-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: command-service
   config:
-    import: ${CONFIG_SERVICE_URI:optional:configserver:http://localhost:9900}
+    import: optional:configserver:http://localhost:9900
   profiles:
     active: postgresql
   datasource:
