--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: gateway-service
   config:
-    import: ${CONFIG_SERVICE_URI:optional:configserver:http://localhost:9900}
+    import: optional:configserver:http://localhost:9900
   cloud:
     gateway:
       routes:
