--- a/config-service/src/main/resources/config/docker/api-service.yml
+++ b/config-service/src/main/resources/config/docker/api-service.yml
@@ -6,3 +6,7 @@ spring:
     password: guest
 gateway:
   url: http://gateway-service:9700
+eureka:
+  client:
+    service-url:
+      defaultZone: http://discovery-service:9800/eureka
