--- a/api-service/src/main/resources/application.yml
+++ b/api-service/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
           apiCommand-out-0:
             producer:
               routingKeyExpression: headers['type']
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9800/eureka
 graphql:
   servlet:
     mapping: /graphql
